# interview-wallbit

./: .env.example  TESTING.md  USAGE.md  cli.py  exchange.db  main.py  pyproject.toml  pytest.ini
api/: exchange_routes.py
database/: connection.py  models.py
domain/models/: exchange_rate.py
infrastructure/adapters/: dolar_api_adapter.py
jobs/: scheduler.py
models/: exchange_rate.py
repositories/: exchange_db_repository.py  exchange_rate_repository.py
routes/: exchange.py
services/: exchange_rate_service.py  service.py
tests/: conftest.py  test_cli.py  test_db_repository.py  test_external_client.py  test_integration.py  test_scheduler.py  test_service.py
