[project]
name = "interview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.1",
    "asyncio>=4.0.0",
    "fastapi[standard]>=0.121.1",
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "typer[all]>=0.20.0",
]
